tests/neg-macros/i7142h/Test_2.scala
object Test {
  macros.test
  macros.test // error
}
